[tool.poetry]
name = "rxconf"
version = "0.0.2"
description = "Powerful and flexible library for realtime configuration management in Python"
authors = ["Andrey Karchevsky <karych@karych.ru>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/realkarych/rxconf/"
repository = "https://github.com/realkarych/rxconf/"
documentation = "https://realkarych.github.io/rxconf/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["configuration", "settings", "yaml", "json", "toml", "ini", "env"]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
aiofiles = "^24.1.0"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"
toml = {version = "^0.10.2", markers = "python_version < '3.11'"}
hvac = "^2.3.0"

[tool.poetry.dev-dependencies]
types-aiofiles = "24.1.0.20240626"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pylint = "^3.3.1"
pyright = "^1.1.389"
ruff = "^0.8.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.45"
types-PyYAML = "^6.0.12"
coverage-badge = "^1.1.2"
typing-extensions = "^4.12.2"
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
