[tool.poetry]
name = "rxconf"
version = "0.0.3"
description = "Powerful and flexible library for realtime configuration management in Python"
authors = ["Andrey Karchevsky <karych@karych.ru>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/realkarych/rxconf/"
repository = "https://github.com/realkarych/rxconf/"
documentation = "https://realkarych.github.io/rxconf/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
keywords = ["configuration", "settings", "yaml", "json", "toml", "ini", "env"]

[tool.poetry.dependencies]
python = ">=3.9"
aiofiles = "^24.1.0"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"
toml = {version = "^0.10.2", markers = "python_version < '3.11'"}

[tool.poetry.dev-dependencies]
types-aiofiles = "24.1.0.20241221"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
mypy = "^1.14.0"
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.3"
pyright = "^1.1.391"
ruff = "^0.8.4"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.49"
types-PyYAML = "^6.0.12"
coverage-badge = "^1.1.2"
typing-extensions = "^4.12.2"
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true
exclude = '''
(
  migrations
  | \.\*
  | files
)
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
default_section = "THIRDPARTY"
lines_after_imports = 2
no_lines_before = "LOCALFOLDER"
include_trailing_comma = true

[tool.pyright]
typeCheckingMode = "standard"
reportUnusedImport = true
reportUnnecessaryTypeIgnoreComment = false
reportMissingImports = true
reportGeneralTypeIssues = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
exclude = []
ignore = []
select = ["A", "B", "C", "E", "F", "N", "Q", "W"]
extend-select = ["UP035", "SIM", "ISC", "RET", "PIE"]
